--- a/Languages/IronPython/IronPython.Wpf/IronPython.Wpf.csproj
+++ b/Languages/IronPython/IronPython.Wpf/IronPython.Wpf.csproj
@@ -15,6 +15,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'FxCop|AnyCPU' ">
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <DocumentationFile>C:\Git\Domo\IronPython\Solutions\..\bin\Debug\IronPython.Wpf.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
   </PropertyGroup>
